--- a/www/views/chore/categoryChores.html
+++ b/www/views/chore/categoryChores.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 
-<ion-view view-title="">
+<ion-view cache-view="false">
     <ion-nav-buttons side="left">
         <a class="button button-icon icon ion-arrow-left-b" ng-href="#/config/category"></a>
     </ion-nav-buttons>
-    <ion-content class="has-footer">
+    <ion-content  class="has-footer">
+
+
+        <ion-refresher
+                pulling-text="{{'PullToRefresh'|translate}}"
+                on-refresh="categoryChoreDataSync()">
+            <div ng-include="'views/commons/computeChore.html'"></div>
+        </ion-refresher>
+
         <article>
 
             <ion-list show-delete="true">
@@ -80,273 +88,8 @@
                 </ion-item>
             </ion-list>
 
-            <!--
-            <div class="padding">
-              <button class="button button-block button-positive" ng-click="choreAdd(categoryChoresCategoryId)"><i class="ion-icon ion-plus"></i></button>
-            </div>
-
-
-
-                <div class="panel panel-default" ng-repeat="chore in choreList">
-                  <div class="panel-heading btn"
-                    ng-class="{'panel-heading-off' : chore[choreCols.timeInMn] <= 0}"
-                    style="border: 0;width: 100%;text-align: left;"
-                    role="tab"
-                    id="heading{{choreGroup}}{{$index}}"
-                    data-toggle="collapse" data-parent="#accordion{{choreGroup}}" data-target="#{{choreGroup}}{{$index}}" aria-expanded="false">
-                    <h4 class="panel-title">
-                      <div style="position:relative">
-                        <img src="{{getChoreCategoryThumbPath(choreGroup)}}"class="img-circle" height="30px" style="position:absolute" />
-                      </div>
-                      <a class="collapsed" style="padding-left:40px">
-                        <small class="visible-xs-inline" style="color:wheat">{{chore[choreCols.name]}}</small>
-                        <span class="hidden-xs">{{chore[choreCols.name]}}</span>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="{{choreGroup}}{{$index}}" class="panel-collapse collapse">
-                    <div class="panel-body">
-
-                      <form class="form-horizontal">
-                            <div class="form-group">
-                              <div class="col-xs-8">
-                                  <p class="lead">{{chore[choreCols.description]}}</p>
-                              </div>
-                              <div class="col-xs-4">
-                                <a class="btn btn-default col-xs-12"
-                                    data-toggle="modal" data-target="#choreModalChore"
-                                    ng-click="choreEdit(chore)">Edit</a>
-                              </div>
-                            </div>
-
-
-                            <div class="form-group">
-                              <label class="col-xs-4 control-label">Estimate (mn)</label>
-                              <div class="col-xs-4">
-                                  <input class="form-control" type="number" pattern="\d*" min="0" max="1000" ng-model="chore[choreCols.timeInMn]" readonly/>
-                              </div>
-                              <div class="col-xs-4">
-                                <a  class="btn btn-link col-xs-12"
-                                    ng-click="chore[choreCols.timeInMn] = 0;saveChore(chore)"
-                                    data-toggle="collapse" data-parent="#accordion{{choreGroup}}" data-target="#{{choreGroup}}{{$index}}" aria-expanded="false">
-                                    Not for us
-                                </a>
-                              </div>
-                            </div>
-
-
-                            <div class="form-group">
-                              <label class="col-xs-4 control-label">Frequency (Days)</label>
-                              <div class="col-xs-4">
-                                <input class="form-control" type="number" pattern="\d*" min="0" ng-model="chore[choreCols.frequencyDays]" readonly/>
-                              </div>
-                              <div class="col-xs-4">
-                                <a class="btn btn-link col-xs-12" disabled>
-                                  <i ng-show="chore[choreCols.priority] == 1" class="glyphicon glyphicon-star"></i>
-                                  <i ng-hide="chore[choreCols.priority] == 1" class="glyphicon glyphicon-star-empty"></i>
-                                </a>
-                              </div>
-                            </div>
-
-                            <div class="form-group">
-                              <label class="col-xs-4 control-label">Affinity for this chore</label>
-                              <div class="col-xs-8">
-                                <div class="row">
-                                  <small class="col-xs-6 text-left">
-                                    <small>{{userA[userCols.firstName]}} {{(100 - Math.round(chore[choreCols.percentAB]))}}%</small>
-                                  </small>
-                                  <small class="col-xs-6 text-right">
-                                    <small>{{(Math.round(chore[choreCols.percentAB]))}}% {{userB[userCols.firstName]}}</small>
-                                  </small>
-                                  <div class="col-xs-12">
-
-                                      <div class="item range range-positive">
-                                        <i class="icon ion-ios-sunny-outline"></i>
-                                        <input class="form-control" type="range" min="0" max="100"
-                                          ng-model="chore[choreCols.percentAB]" ng-change='saveChore(chore)'/>
-                                        <i class="icon ion-ios-sunny"></i>
-                                      </div>
-
-                                  </div>
-
-
-
-                                </div>
-                              </div>
-                            </div>
-
-
-                            <div class="form-group">
-                              <label class="col-xs-4 control-label">Last time it was done</label>
-                              <div class="col-xs-8">{{getDateText(chore[choreCols.lastTimeDone])}}</div>
-                            </div>
-
-                      </form>
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-
-            </div>
-            </div>
-          -->
-
         </article>
 
     </ion-content>
 </ion-view>
 <div ng-include="'views/commons/footer.html'"></div>
-
-<!--
-<div ng-if="!choreInitSpinnerStopped"
-    mle-animateshow="!choreInitSpinnerStopped"
-    after-show="afterNavigationInitSpinnerShow()"
-    after-hide="afterNavigationInitSpinnerHide()">
-    <div ng-include="'views/commons/computeChore.html'"></div>
-</div>
-
-<div ng-include="'views/commons/header.html'"></div>
-
-<div ng-if="choreInitSpinnerStopped">
-
-  <article class="container">
-
-    <div class="row">
-    <div class="col-xs-12   col-sm-offset-1 col-sm-10">
-
-      <div class="row">
-        <div class="alert alert-warning alert-dismissible" role="alert" ng-show="choreErrMessage">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <strong>Warning!</strong> {{choreErrMessage}}
-        </div>
-      </div>
-
-
-      <div class="page-header" style="margin-top:0">
-        <h4><i class="glyphicon glyphicon-cog"></i> Appreciate chores <small>({{chores.length}})</small></h4>
-      </div>
-
-
-
-      <div class="row">
-      <div class="col-xs-12">
-        <div class="panel-group" id="accordion{{choreGroup}}" role="tablist" aria-multiselectable="true"
-            ng-repeat="(choreGroup, choreList) in chores | groupBy : 'choreCategory'">
-
-          <h3>
-            {{getChoreCategoryName(choreGroup)}} <small>({{choreList.length}})</small>
-            <a  class="btn btn-default" style="float:right"
-                data-toggle="modal" data-target="#choreModalChore"
-                ng-click="choreAddChore(choreGroup)">+</a>
-          </h3>
-
-          <div class="panel panel-default" ng-repeat="chore in choreList">
-            <div class="panel-heading btn"
-              ng-class="{'panel-heading-off' : chore[choreCols.timeInMn] <= 0}"
-              style="border: 0;width: 100%;text-align: left;"
-              role="tab"
-              id="heading{{choreGroup}}{{$index}}"
-              data-toggle="collapse" data-parent="#accordion{{choreGroup}}" data-target="#{{choreGroup}}{{$index}}" aria-expanded="false">
-              <h4 class="panel-title">
-                <div style="position:relative">
-                  <img src="{{getChoreCategoryThumbPath(choreGroup)}}"class="img-circle" height="30px" style="position:absolute" />
-                </div>
-                <a class="collapsed" style="padding-left:40px">
-                  <small class="visible-xs-inline" style="color:wheat">{{chore[choreCols.name] | cut:true:30:' ...'}}</small>
-                  <span class="hidden-xs">{{chore[choreCols.name] | cut:true:60:' ...'}}</span>
-                </a>
-              </h4>
-            </div>
-            <div id="{{choreGroup}}{{$index}}" class="panel-collapse collapse">
-              <div class="panel-body">
-
-                <form class="form-horizontal">
-                      <div class="form-group">
-                        <div class="col-xs-8">
-                            <p class="lead">{{chore[choreCols.description]}}</p>
-                        </div>
-                        <div class="col-xs-4">
-                          <a class="btn btn-default col-xs-12"
-                              data-toggle="modal" data-target="#choreModalChore"
-                              ng-click="choreEdit(chore)">Edit</a>
-                        </div>
-                      </div>
-
-
-                      <div class="form-group">
-                        <label class="col-xs-4 control-label">Estimate (mn)</label>
-                        <div class="col-xs-4">
-                            <input class="form-control" type="number" pattern="\d*" min="0" max="1000" ng-model="chore[choreCols.timeInMn]" readonly/>
-                        </div>
-                        <div class="col-xs-4">
-                          <a  class="btn btn-link col-xs-12"
-                              ng-click="chore[choreCols.timeInMn] = 0;saveChore(chore)"
-                              data-toggle="collapse" data-parent="#accordion{{choreGroup}}" data-target="#{{choreGroup}}{{$index}}" aria-expanded="false">
-                              Not for us
-                          </a>
-                        </div>
-                      </div>
-
-
-                      <div class="form-group">
-                        <label class="col-xs-4 control-label">Frequency (Days)</label>
-                        <div class="col-xs-4">
-                          <input class="form-control" type="number" pattern="\d*" min="0" ng-model="chore[choreCols.frequencyDays]" readonly/>
-                        </div>
-                        <div class="col-xs-4">
-                          <a class="btn btn-link col-xs-12" disabled>
-                            <i ng-show="chore[choreCols.priority] == 1" class="glyphicon glyphicon-star"></i>
-                            <i ng-hide="chore[choreCols.priority] == 1" class="glyphicon glyphicon-star-empty"></i>
-                          </a>
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <label class="col-xs-4 control-label">Affinity for this chore</label>
-                        <div class="col-xs-8">
-                          <div class="row">
-                            <small class="col-xs-6 text-left">
-                              <small>{{userA[userCols.firstName] | cut:true:10:' ...'}} {{(100 - Math.round(chore[choreCols.percentAB]))}}%</small>
-                            </small>
-                            <small class="col-xs-6 text-right">
-                              <small>{{(Math.round(chore[choreCols.percentAB]))}}% {{userB[userCols.firstName] | cut:true:10:' ...'}}</small>
-                            </small>
-                            <div class="col-xs-12">
-                              <input class="form-control" type="range" min="0" max="100"
-                                ng-model="chore[choreCols.percentAB]" ng-change='saveChore(chore)'/>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-
-                      <div class="form-group">
-                        <label class="col-xs-4 control-label">Last time it was done</label>
-                        <div class="col-xs-8">{{getDateText(chore[choreCols.lastTimeDone])}}</div>
-                      </div>
-
-                </form>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-      </div>
-
-    </div>
-    </div>
-  </article>
-
-
-  <div ng-include="'views/commons/footer.html'"></div>
-  <div ng-include="'views/chore/choreModalCategory.html'"></div>
-  <div ng-include="'views/chore/choreModalChore.html'"></div>
-
-</div>
-
--->
