--- a/www/views/login/loginIn.html
+++ b/www/views/login/loginIn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<ion-view view-title="">
+<ion-view view-title="" cache-view="false">
     <ion-content>
 
         <div ng-if="!loginInitSpinnerStopped"
