--- a/www/views/user/userCalendar.html
+++ b/www/views/user/userCalendar.html
@@ -182,7 +182,7 @@
                     <label class="input-label" translate>Sunday</label>
                     <input type="range" min="0" max="300" ng-model="userB[userCols.timeInMnPerSund]"
                            ng-change="userSave(userB);">
-                    <span>{{userA[userCols.timeInMnPerSund]}} <span translate>mn</span></span>
+                    <span>{{userB[userCols.timeInMnPerSund]}} <span translate>mn</span></span>
                 </li>
             </ul>
 
