--- a/www/views/dashboard/modals.html
+++ b/www/views/dashboard/modals.html
@@ -29,20 +29,9 @@
                         <i class="icon ion-ios-time-outline"></i>
                     </div>
                     <label class="item item-input">
-                        <textarea placeholder="{{'Comments'|translate}}" ng-model="dashboardModalHistoric[historicCols.histoComment]"></textarea>
+                        <textarea placeholder="{{'Comments'|translate}}"
+                                  ng-model="dashboardModalHistoric[historicCols.histoComment]"></textarea>
                     </label>
-                    <!--
-                    <label class="item">
-                        <span translate>DashboardModalHowDidYouFeel</span>
-                    </label>
-
-                    <div class="item range range-assertive" style="border-top:0;">
-                        <i class="icon ion-sad"></i>
-                        <input type="range" min="0" max="100"
-                               ng-model="dashboardModalHistoric[historicCols.AUserAffinity]">
-                        <i class="icon ion-happy-outline"></i>
-                    </div>
-                    -->
                 </div>
 
                 <button type="button" class="button button-block button-assertive"
