--- a/www/views/dashboard/dashboardIndicator.html
+++ b/www/views/dashboard/dashboardIndicator.html
@@ -38,34 +38,54 @@
                 </div>
             </div>
 
-            <div style="position:relative; width:100%;">
-                <canvas id="doughnut" class="chart chart-doughnut"
-                        chart-data="dashboardIndicatorsData"
-                        chart-labels="dashboardIndicatorsLabels"
-                        chart-colours="dashboardIndicatorsChartColours">
-                </canvas>
-                <!--<canvas id="radar" class="chart chart-radar" data="data" labels="labels"></canvas>
-                <img src="img/etats_rond/girl01.gif" style="position: absolute; top: 36%;left: 40%;width: 20%;">-->
-                <img src="img/etats_rond/ok/ok01.gif"
-                     ng-show="(dashboardIndicatorsComputed.indicPercent[0] < 66) && (dashboardIndicatorsComputed.indicPercent[0] > 33)"
-                     style="position: absolute; top: 20%;left: 35%;width: 30%;">
-                <img src="img/etats_rond/kogirls/kogirl01.gif"
-                     ng-hide="(dashboardIndicatorsComputed.indicPercent[0] < 66) && (dashboardIndicatorsComputed.indicPercent[0] > 33)"
-                     style="position: absolute; top: 20%;left: 35%;width: 30%;">
+            <div class="row responsive-sm">
+                <div class="col">
+                    <h3 style="color:{{dashboardIndicatorsChartColours[1].strokeColor}}">
+                        {{userA[userCols.firstName]}}
+                        <small>{{dashboardIndicatorsComputed.indicPercent[0]}}%
+                            {{dashboardIndicatorsComputed.indicTimeSpent[0]}} min.
+                        </small>
+                    </h3>
+                    <h3 style="color:{{dashboardIndicatorsChartColours[0].strokeColor}};">
+                        {{userB[userCols.firstName]}}
+                        <small>{{dashboardIndicatorsComputed.indicPercent[1]}}%
+                            {{dashboardIndicatorsComputed.indicTimeSpent[1]}} min.
+                        </small>
+                    </h3>
+                </div>
+                <div class="col-75">
 
-            </div>
+                    <div style="position:relative; width:100%;">
+                        <canvas id="doughnut" class="chart chart-doughnut"
+                                chart-data="dashboardIndicatorsData"
+                                chart-labels="dashboardIndicatorsLabels"
+                                chart-colours="dashboardIndicatorsChartColours">
+                        </canvas>
+                        <!--<canvas id="radar" class="chart chart-radar" data="data" labels="labels"></canvas>
+                        <img src="img/etats_rond/girl01.gif" style="position: absolute; top: 36%;left: 40%;width: 20%;">-->
+                        <img src="img/etats_rond/ok/ok01.gif"
+                             ng-show="(dashboardIndicatorsComputed.indicPercent[0] < 66) && (dashboardIndicatorsComputed.indicPercent[0] > 33)"
+                             style="position: absolute; top: 20%;left: 35%;width: 30%;">
+                        <img src="img/etats_rond/kogirls/kogirl01.gif"
+                             ng-hide="(dashboardIndicatorsComputed.indicPercent[0] < 66) && (dashboardIndicatorsComputed.indicPercent[0] > 33)"
+                             style="position: absolute; top: 20%;left: 35%;width: 30%;">
 
-            <div style="position:relative; width:100%;">
-                <canvas id="radarDone"
-                        class="chart chart-radar chart-xs"
-                        chart-data="dashboardIndicatorsDataDone"
-                        chart-labels="dashboardIndicatorsLabelsDone"
-                        chart-colours="dashboardIndicatorsChartColours">
-                </canvas>
+                    </div>
+                    <div style="position:relative; width:100%;">
+                        <canvas id="radarDone"
+                                class="chart chart-radar chart-xs"
+                                chart-data="dashboardIndicatorsDataDone"
+                                chart-labels="dashboardIndicatorsLabelsDone"
+                                chart-colours="dashboardIndicatorsChartColours">
+                        </canvas>
+                    </div>
+
+                </div>
             </div>
 
             <button class="button button-block button-dark button-clear">
-                <h3><span translate>Record of anything done by</span> {{dashboardIndicatorsSearch.user[userCols.firstName]}}
+                <h3><span translate>Record of anything done by</span>
+                    {{dashboardIndicatorsSearch.user[userCols.firstName]}}
                 </h3>
             </button>
 
@@ -74,7 +94,9 @@
                           ng-repeat="historic in dashboardIndicatorsHistoricsForOneUser | orderBy : 'actionDoneDate' : true">
                     <ion-item class="item item-icon-left item-toggle item-dark">
                         {{historic[historicCols.name]}}
-                        <p>{{historic[historicCols.actionDoneDate].substring(0,10)}} {{historic[historicCols.actionDoneDate].substring(11,16)}} ({{historic[historicCols.timeInMn]}} mn)</p>
+                        <p>{{historic[historicCols.actionDoneDate].substring(0,10)}}
+                            {{historic[historicCols.actionDoneDate].substring(11,16)}}
+                            ({{historic[historicCols.timeInMn]}} mn)</p>
                         <p>{{historic[historicCols.histoComment]}}</p>
                     </ion-item>
                 </ion-list>
