--- a/www/views/dashboard/dashboardUser.html
+++ b/www/views/dashboard/dashboardUser.html
@@ -83,7 +83,7 @@
                 <ion-list>
                     <div class="item item-divider">
                         <span ng-bind-html="dashboardDisplayHistoricCalendar()"></span>
-                    </span>
+                        </span>
                     </div>
                     <label class="item item-input item-select" style="border:0">
                         <div class="input-label" translate>Unforeseen item :</div>
@@ -127,15 +127,16 @@
             <!-- Now - END -->
 
             <!-- Historics - BEGIN -->
+            canSwipe : {{canSwipe}}
             <div ng-repeat="(historicGroup, historicList) in (dashboardHistorics| filter : {userId : dashboardSearch.userId}) | orderBy:'actionTodoDate' | groupBy : 'actionTodoDate'"
                  ng-init="isTodayGroup = dashboardIsItToday(historicGroup);">
-                <ion-list>
+                <ion-list can-swipe="canSwipe" show-delete="showDelete" show-reorder="showReorder" class="animate-ripple">
                     <ion-item class="item item-divider" ng-hide="isTodayGroup">
                         <span ng-bind-html="dashboardDisplayHistoricCalendar(historicGroup)"></span>
                         <!--<span class="badge">{{dashboardAvailability(historicGroup, dashboardSearch.userId)}}&nbsp;
                         <span translate>mn</span></span>-->
                     </ion-item>
-                    <div class="item item-avatar item-button-right"
+                    <ion-item class="item item-avatar item-button-right"
                          ng-repeat="historic in historicList">
 
                         <img ng-src="{{dashboardGetChoreCategoryThumbPath(historic[historicCols.category])}}"/>
@@ -155,7 +156,11 @@
                             <small translate>Terminated</small>
                         </button>
 
-                    </div>
+                        <ion-option-button class="button-info" ng-click="catDeactivate(category)" translate>
+                            CatDeactivate
+                        </ion-option-button>
+
+                    </ion-item>
                 </ion-list>
             </div>
             <!-- Historics - END -->
